<resources>
    <string name="app_name">Mobile Agent</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="forgotyourpassword">Forgot Your Password?</string>
    <string name="chechin">CHECK IN</string>
    <string name="chechout">CHECK OUT</string>
    <string name="reservation">Reservation #</string>
    <string name="rental">Rental #</string>
    <string name="next">Next</string>
    <string name="logout">LogOut</string>
    <string name="server_connection_error">Sorry! We\'re unable to connect to the server.</string>
    <string name="network_error">Network error. Please check your connection.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reservation_number">Reservation Number :</string>
    <string name="vehicle_id">Vehicle ID :</string>
    <string name="pickup_date">Pickup Date :</string>
    <string name="dropoff_date">Dropoff Date :</string>
    <string name="odometer_out">Odometer Out</string>
    <string name="fuel_out">Fuel Out</string>
    <string name="continueBTN">Continue</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>